package com.directi.training.lsp.exercise;

public interface IDuck {
    public void quack();

    public void swim();
}
